--- a/depth_inference/package.xml
+++ b/depth_inference/package.xml
@@ -15,6 +15,8 @@
   <depend>onnxruntime</depend>
   <depend>opencv</depend>
   <depend>cuda</depend>
+  <depend>tf2_ros</depend>
+
 
   <build_depend>ament_cmake</build_depend>
 
