--- a/depth_inference/package.xml
+++ b/depth_inference/package.xml
@@ -16,6 +16,10 @@
   <depend>opencv</depend>
   <depend>cuda</depend>
   <depend>tf2_ros</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
+
+
 
 
   <build_depend>ament_cmake</build_depend>
