--- a/depth_inference/cfg/config.yaml
+++ b/depth_inference/cfg/config.yaml
@@ -1,9 +1,10 @@
 slam_node:
   ros__parameters:
-    onnx_model : /home/hesam/Desktop/playground/depth_node/model/unidepthv2_vits14_camera.onnx
+    onnx_model : /home/hesam/Desktop/playground/depth_node/model/depth pro/model_fp16.onnx
     image_width: 644
     image_height: 364
     image_topic : "/camera2/left/image_raw"
+    model : depth_pro
 
 utils :
   ros__parameters:
