--- a/depth_inference/cfg/config.yaml
+++ b/depth_inference/cfg/config.yaml
@@ -1,11 +1,11 @@
 slam_node:
   ros__parameters:
-    onnx_model : /home/hesam/Desktop/playground/depth_node/model/depth pro/model_q4f16.onnx
+    onnx_model : /home/hesam/Desktop/playground/depth_node/model/unidepth/unidepthv2_vits14_simp.onnx
     image_width: 644
     image_height: 364
-    image_topic : "/camera2/left/image_raw"
-    model : depth_pro
+    image_topic : "/kitti/camera_color_left/image_raw"
+    model : unidepth
     
-utils :
+utils_node :
   ros__parameters:
     dataset : KITTI 
