Add IMU pre-integration : somewhere in KITTI it becomes ill-conditioned

--- a/depth_inference/cfg/config.yaml
+++ b/depth_inference/cfg/config.yaml
@@ -9,3 +9,11 @@ slam_node:
 utils_node :
   ros__parameters:
     dataset : KITTI 
+
+optimizer_node:
+  ros__parameters:
+    acc_std: 0.15
+    gyro_std: 0.02
+    integration_std: 0.001
+    optimization_interval_ms : 100
+    imu_topic : "/kitti/oxts/imu"
