--- a/depth_inference/cfg/config.yaml
+++ b/depth_inference/cfg/config.yaml
@@ -1,19 +1,19 @@
 slam_node:
   ros__parameters:
-    onnx_model : /home/hesam/Desktop/playground/depth_node/model/unidepth/unidepthv2_vits14_simp.onnx
-    image_width: 644
-    image_height: 364
+    onnx_model : /home/hesam/Desktop/depth_node/model/metric3d/model.onnx
+    image_width: 664
+    image_height: 350
     image_topic : "/kitti/camera_color_left/image_raw"
-    model : unidepth
+    model : metric3d
     
 utils_node :
   ros__parameters:
-    dataset : KITTI 
+    dataset : metric3d 
 
 optimizer_node:
   ros__parameters:
-    acc_std: 0.15
-    gyro_std: 0.02
-    integration_std: 0.001
+    acc_std: 0.4
+    gyro_std: 0.2
+    integration_std: 0.1
     optimization_interval_ms : 100
     imu_topic : "/kitti/oxts/imu"
