--- a/depth_inference/cfg/config.yaml
+++ b/depth_inference/cfg/config.yaml
@@ -1,10 +1,10 @@
 slam_node:
   ros__parameters:
-    onnx_model : /home/hesam/Desktop/depth_node/model/unidepth/unidepthv2_vits14_simp.onnx
-    image_width: 644
-    image_height: 364
+    onnx_model : /home/hesam/Desktop/depth_node/model/metric3d/model.onnx
+    image_width: 960
+    image_height: 512
     image_topic : "/kitti/camera_color_left/image_raw"
-    model : unidepth
+    model : metric3d
     
 utils_node :
   ros__parameters:
