--- a/depth_inference/cfg/config.yaml
+++ b/depth_inference/cfg/config.yaml
@@ -1,10 +1,10 @@
 slam_node:
   ros__parameters:
-    onnx_model : /home/hesam/Desktop/depth_node/model/metric3d/model.onnx
-    image_width: 664
+    onnx_model : /home/hesam/Desktop/active/depth_node/model/unidepth/unidepthv2_vits14._big.onnx
+    image_width: 1204
     image_height: 350
     image_topic : "/kitti/camera_color_left/image_raw"
-    model : metric3d
+    model : unidepth
     
 utils_node :
   ros__parameters:
